# qryptic

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.yNHZNS  Qryptic.qmlproject  Qryptic.qmlproject.qtds  README.md  main.qml  qmlmodules
content/: App.qml  CMakeLists.txt  Screen01.ui.qml  ScreenHome.ui.qml  ScreenHugin.ui.qml
imports/: CMakeLists.txt
imports/Qryptic/: CMakeLists.txt  qmldir
imports/Qryptic/designer/: plugin.metainfo
qryptic/qml/: main.qml
src/: import_qml_plugins.h
src/qryptic/: CMakeLists.txt
src/qryptic/qml/: main.qml  qml.qrc
